--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.8",
-        "royvoetman/laravel-gitlab-storage": "^1.0"
+        "laravelcollective/html": "^5.8"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
