--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     "require": {
         "php": "^7.1.3",
         "ext-json": "*",
+        "ext-dom": "*",
+        "embed/embed": "^3.4",
         "erusev/parsedown": "^1.7",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
