--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "aos": "^3.0.0-beta.6",
         "lazysizes": "^5.1.0"
     }
 }
